<resources>
    <string name="app_name">CS4EU Smart City pilot</string>
    <string name="miMurciaTitle">Welcome to MiMurcia</string>
    <string name="btnLogin">Login!</string>
    <string name="btnSignup">Sign Up!</string>
    <string name="hintLogin">User</string>
    <string name="hintPassword">Password</string>
    <string name="btnSendRegister">Confirm</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="scrRegister">Sign-up</string>
    <string name="btnIssuance">Credential obtention</string>
    <string name="sign_with_eid">sign with eID</string>
    <string name="KeyRock_OAuth" translatable="false"><![CDATA[https://ppissuer.inf.um.es/oauth2/authorize?response_type=code&client_id=c682ef00-c13a-444e-a9db-b91ebba1eee0&state=xyz&redirect_uri=https://google.com]]></string>
    <string name="hintRepeatPassword">Repeat\nPassword</string>
    <string name="passwordNotMatch">Passwords do not match</string>
    <string name="failRegister">Something failed while registering</string>
    <string name="service">Service</string>
    <string name="askPermissions">The service would like to know the following data</string>
    <string name="askPermissionsText">You can accept or decline</string>
    <string name="ok">Accept</string>
    <string name="reject">Reject</string>
    <string name="failLogin">Wrong username or password</string>
    <string name="satisfied">Satisfied</string>
    <string name="notSatisfied">NotSatisfied</string>
    <string name="noCredStored">No stored credential</string>
    <string name="settingsTitleString">Address</string>
    <string name="countryString">Country</string>
    <string name="provinceString">Province</string>
    <string name="cityString">City</string>
    <string name="postalCodeString">Postal\ncode</string>
    <string name="addressString">Address</string>
    <string name="birthDateTitleString">Date of birth</string>
    <string name="birthDateString">Birth date</string>
    <string name="buttonConfirmSettingsString">Confirm</string>
    <string name="defaultCountry">Spain</string>
    <string name="defaultProvince">Murcia</string>
    <string name="defaultCity">Molina de Segura</string>
    <string name="defaultPostCode">30500</string>
    <string name="defaultAddress">Park Avenue 13 2A</string>
    <string name="defaultBirthDate">02-07-1990</string>
    <string name="addressTitleString">Address</string>
    <string name="noInitilized">Client not\ninitialized</string>
    <string name="tryInitText">Try to initialize</string>
    <string name="store">Store</string>
    <string name="store_can_number">Store CAN number</string>
    <string name="scan_eid">Scan eID</string>
    <string name="switchAddressText">MockAddress</string>
    <string name="switchBDtext">MockBirthDate</string>
    <string name="put_your_can_first">Invalid CAN written</string>
    <string name="revealUidText">Link this request to your UID</string>
    <string name="searchBtnText">Manage services, see stats, advanced data discovery/consumption</string>
    <string name="txtGoMngServices">Manage Services</string>
    <string name="txtGoStats">See Service Stats</string>
    <string name="txtGoConsume">Consume Data</string>
    <string name="txtGoDiscover">Discover Data</string>
    <string name="moreInfoTxt">For more info on specific services:</string>
    <string name="identifyYourself">You need to identify yourself to use this functionality</string>
    <string name="fiwareServiceText">Fiware\nService</string>
    <string name="textEntity">Type</string>
    <string name="hintEntityType">Empty to get all types</string>
    <string name="hintFiwareService">Empty for /#</string>
    <string name="searchText">Search</string>
    <string name="textIdFiware">Id</string>
    <string name="textBlankOrPattern">Can be blank or pattern</string>
    <string name="typeConsumeHint">Type of the entities</string>
    <string name="capTokenIsNeededText">No capability token stored</string>
    <string name="entityTypeIsNeededText">Type is needed for a search</string>
    <string name="textActivateServiceCheck">Enable\nservice</string>
    <string name="noEnabledSerText">No services enabled, go to manage services (within advanced options below)</string>
    <string name="textDescCTIPath">Path to json file with the event: \'%1$s\'</string>

</resources>
