<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipal">

    <Button
        android:id="@+id/btnIssuance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="onIssuance"
        android:text="@string/btnIssuance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/servicesListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIssuance" />

    <TextView
        android:id="@+id/NoStoredCred"
        android:layout_width="97dp"
        android:layout_height="45dp"
        android:layout_marginEnd="20dp"
        android:text="@string/noCredStored"
        android:textAlignment="center"
        android:textColor="#FF0404"
        app:layout_constraintEnd_toStartOf="@+id/btnIssuance"
        app:layout_constraintTop_toTopOf="@+id/btnIssuance" />

    <Button
        android:id="@+id/buttonTryInitialization"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:onClick="onTryClick"
        android:text="@string/tryInitText"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/btnIssuance"
        app:layout_constraintTop_toTopOf="@+id/btnIssuance" />

    <ProgressBar
        android:id="@+id/progressBarMenuPrincipal"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/servicesListView"
        app:layout_constraintEnd_toStartOf="@+id/servicesListView"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toEndOf="@+id/servicesListView"
        app:layout_constraintTop_toBottomOf="@+id/servicesListView"
        app:layout_constraintVertical_bias="0.594" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/mainSearchBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:contentDescription="@string/searchBtnText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_search" />

    <TextView
        android:id="@+id/noEnabledTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="50dp"
        android:text="@string/noEnabledSerText"
        android:textColor="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIssuance" />

</androidx.constraintlayout.widget.ConstraintLayout>